# salsa

./: .gitmodules  Cargo.toml  NOTES.MD
.github/workflows/: cargo.yml  changelog-label.yml  docs.yml  downstream-project-anchor.yml  downstream-project-spl.yml  publish-windows-tarball.yml  rebase.yaml  release.yml
bundle/: Cargo.toml
bundle/benches/: load_and_execute_bundle.rs
bundle/src/: bundle_execution.rs  lib.rs  scheduler.rs  timer.rs
cli/: Cargo.toml
core/: Cargo.toml
core/benches/: shredder.rs
core/src/: admin_rpc_post_init.rs  banking_simulation.rs  banking_stage.rs  bundle_stage.rs  cluster_info_vote_listener.rs  immutable_deserialized_bundle.rs  lib.rs  next_leader.rs  packet_bundle.rs  replay_stage.rs  scheduler_synchronization.rs  tip_manager.rs  tpu.rs  tvu.rs  validator.rs  voting_service.rs
core/src/banking_stage/: consume_worker.rs  consumer.rs  decision_maker.rs  external_control.rs  immutable_deserialized_packet.rs  latest_validator_vote_packet.rs  leader_slot_metrics.rs  packet_deserializer.rs  packet_receiver.rs  progress_tracker.rs  scheduler_messages.rs  unprocessed_transaction_storage.rs  vote_packet_receiver.rs  vote_storage.rs  vote_worker.rs
core/src/banking_stage/transaction_scheduler/: bam_scheduler.rs  greedy_scheduler.rs  prio_graph_scheduler.rs  receive_and_buffer.rs  scheduler_common.rs  scheduler_controller.rs
core/src/block_stage/: block_consumer.rs  mod.rs
core/src/bundle_stage/: bundle_account_locker.rs  bundle_consumer.rs  bundle_packet_deserializer.rs  bundle_packet_receiver.rs  bundle_stage_leader_metrics.rs  bundle_storage.rs  committer.rs
core/src/proxy/: auth.rs  block_engine_stage.rs  fetch_stage_manager.rs  mod.rs  relayer_stage.rs
core/tests/: block_consumer.rs  bundle_consumer.rs
cost-model/src/: cost_tracker.rs
dev-bins/: Cargo.toml
entry/src/: poh.rs
geyser-plugin-interface/src/: geyser_plugin_interface.rs
geyser-plugin-manager/src/: slot_status_notifier.rs
gossip/: Cargo.toml
gossip/src/: cluster_info.rs  contact_info.rs
harmonic-protos/src/: lib.rs
harmonic-scheduler/: Cargo.toml  README.md  build.rs
harmonic-scheduler/src/: auction_client.rs  auth.rs  block_engine.rs  config.rs  consts.rs  crank.rs  error.rs  fallback.rs  ingest.rs  ipc.rs  main.rs  remote_tpu.rs  scheduler.rs  tip_manager.rs  tpu_proxy_client.rs  version.rs
harmonic-scheduler/src/ipc/: mod.rs  progress.rs  shmem.rs
harmonic-scheduler/src/scheduling/: account_queue.rs  mod.rs  task.rs  worker.rs
harmonic-scheduler/src/tip_manager/: tip_distribution.rs  tip_payment.rs
harmonic-scheduler/src/validator/: block_stage.rs  fallback_stage.rs  mod.rs  packets.rs  schedule.rs  scheduler.rs
jito-protos/src/: lib.rs
ledger/src/: shred.rs  shredder.rs
ledger/src/shred/: stats.rs
local-cluster/src/: local_cluster.rs  validator_configs.rs
perf/src/: sigverify.rs
platform-tools-sdk/cargo-build-sbf/tests/crates/fail/: Cargo.toml
platform-tools-sdk/cargo-build-sbf/tests/crates/noop/: Cargo.toml
platform-tools-sdk/cargo-build-sbf/tests/crates/package-metadata/: Cargo.toml
platform-tools-sdk/cargo-build-sbf/tests/crates/workspace-metadata/: Cargo.toml
poh/src/: poh_recorder.rs  poh_service.rs  record_channels.rs  transaction_recorder.rs
program-test/src/: programs.rs
programs/sbf/: Cargo.toml
rpc/: Cargo.toml
rpc-client-api/src/: bundles.rs
rpc/src/: rpc.rs  rpc_service.rs  slot_status_notifier.rs
runtime/src/: bank.rs
runtime/src/bank/: tests.rs
scheduler-bindings/src/: lib.rs
scheduling-utils/src/: transaction_ptr.rs
scheduling-utils/src/handshake/: client.rs  server.rs  shared.rs
send-transaction-service/src/: transaction_client.rs
svm/: Cargo.toml
svm/src/: account_loader.rs  account_overrides.rs  transaction_processing_result.rs  transaction_processor.rs
svm/tests/example-programs/clock-sysvar/: Cargo.toml
svm/tests/example-programs/hello-solana/: Cargo.toml
svm/tests/example-programs/simple-transfer/: Cargo.toml
svm/tests/example-programs/transfer-from-account/: Cargo.toml
svm/tests/example-programs/write-to-account/: Cargo.toml
test-validator/src/: lib.rs
tip-manager/src/: lib.rs
transaction-view/src/: transaction_view.rs
turbine/src/: broadcast_stage.rs  cluster_nodes.rs  multicast_root_forwarder.rs
turbine/src/broadcast_stage/: broadcast_utils.rs  standard_broadcast_run.rs
unified-scheduler-pool/src/: lib.rs
validator/src/: admin_rpc_service.rs  cli.rs  main.rs
validator/src/commands/: mod.rs
validator/src/commands/run/: args.rs  execute.rs
version/src/: lib.rs
