[package]
name = "solana-bundle"
description = "Library related to handling bundles"
documentation = "https://docs.rs/solana-bundle"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_bundle"
bench = false


[dependencies]
anchor-lang = { workspace = true }
dashmap.workspace = true
itertools = { workspace = true }
log = { workspace = true }
que = { git = "https://github.com/temporalxyz/que.git", branch = "channel-mode-refactor" }
rayon.workspace = true
rustc-hash = "2.0.0"
serde = { workspace = true }
sha2 = { workspace = true }
solana-account = { workspace = true }
solana-accounts-db = { workspace = true }
solana-cost-model.workspace = true
solana-ledger = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-message.workspace = true
solana-poh = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-runtime = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-signature = { workspace = true }
solana-svm = { workspace = true }
solana-svm-timings = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bincode.workspace = true
criterion.workspace = true
rand = "0.9.2"
solana-cluster-type.workspace = true
solana-compute-budget-interface.workspace = true
solana-fee-calculator.workspace = true
solana-genesis-config.workspace = true
solana-hash = { workspace = true }
solana-clock = { workspace = true }
solana-instruction.workspace = true
solana-keypair = { workspace = true }
solana-logger = { workspace = true }
solana-native-token.workspace = true
solana-program-test.workspace = true
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-signer = { workspace = true }
solana-system-transaction = { workspace = true }
solana-vote-interface.workspace = true

[[bench]]
name = "load_and_execute_bundle"
harness = false
